[gd_scene load_steps=8 format=3 uid="uid://c26y1i78s7jns"]

[ext_resource type="PackedScene" uid="uid://dx0aaxtxvoij6" path="res://source/entity/parallax_bg.tscn" id="1_kkl6x"]
[ext_resource type="Script" uid="uid://bt67hiykxjlat" path="res://source/UI/menu.gd" id="1_tklvo"]
[ext_resource type="Texture2D" uid="uid://oghxp6w8p0hd" path="res://assets/textures/bg/texture_bg_green.png" id="2_yuc7w"]
[ext_resource type="Texture2D" uid="uid://dye3im5oydaqf" path="res://assets/textures/ui/texture_button_icon_leaderboard.png" id="4_tklvo"]
[ext_resource type="Texture2D" uid="uid://dd1qv1mxj1wfo" path="res://assets/textures/ui/texture_button_icon_achievements.png" id="5_yhahi"]

[sub_resource type="LabelSettings" id="LabelSettings_ngerf"]
font_size = 80

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tklvo"]
bg_color = Color(0.58431375, 0.96862745, 0.6627451, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tklvo")

[node name="ParallaxBg" parent="." instance=ExtResource("1_kkl6x")]
play_speed = 2.0
bg_texture = ExtResource("2_yuc7w")

[node name="LeftTopAuthor" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 13.0
offset_top = 7.0
offset_right = 91.0
offset_bottom = 33.0
alignment = 1

[node name="Label" type="Label" parent="LeftTopAuthor"]
layout_mode = 2
text = "Author"
horizontal_alignment = 1

[node name="AuthorLabel" type="Label" parent="LeftTopAuthor"]
layout_mode = 2
text = ":quhou"
horizontal_alignment = 1

[node name="Title" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 37.0
offset_right = 100.0
offset_bottom = 200.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="Title"]
layout_mode = 2
text = "QUHG
"
label_settings = SubResource("LabelSettings_ngerf")

[node name="RIghtTopButtonAction" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="RightTopButtonGroup" type="VBoxContainer" parent="RIghtTopButtonAction"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RankButton" type="Button" parent="RIghtTopButtonAction/RightTopButtonGroup"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../CenterButtonAction/ButtonGroup/Start")
focus_neighbor_top = NodePath("../../../CenterButtonAction/ButtonGroup/Start")
focus_neighbor_right = NodePath("../ArchiveButton")
focus_neighbor_bottom = NodePath("../ArchiveButton")
focus_next = NodePath("../ArchiveButton")
focus_previous = NodePath("../../../CenterButtonAction/ButtonGroup/Start")
text = "RANK"
icon = ExtResource("4_tklvo")
icon_alignment = 2

[node name="ArchiveButton" type="Button" parent="RIghtTopButtonAction/RightTopButtonGroup"]
layout_mode = 2
focus_neighbor_left = NodePath("../RankButton")
focus_neighbor_top = NodePath("../RankButton")
focus_neighbor_right = NodePath("../../../CenterButtonAction/ButtonGroup/Start")
focus_neighbor_bottom = NodePath("../../../CenterButtonAction/ButtonGroup/Start")
focus_next = NodePath("../../../CenterButtonAction/ButtonGroup/Start")
focus_previous = NodePath("../RankButton")
text = "ACHIEVE"
icon = ExtResource("5_yhahi")
icon_alignment = 2

[node name="ClearDataButton" type="Button" parent="RIghtTopButtonAction/RightTopButtonGroup"]
layout_mode = 2
focus_neighbor_left = NodePath("../RankButton")
focus_neighbor_top = NodePath("../RankButton")
focus_neighbor_right = NodePath("../../../CenterButtonAction/ButtonGroup/Start")
focus_neighbor_bottom = NodePath("../../../CenterButtonAction/ButtonGroup/Start")
focus_next = NodePath("../../../CenterButtonAction/ButtonGroup/Start")
focus_previous = NodePath("../RankButton")
text = "ClearData"
icon = ExtResource("5_yhahi")
icon_alignment = 2

[node name="RightBottomVersion" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -89.0
offset_top = -27.0
offset_right = -11.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="RightBottomVersion"]
layout_mode = 2
text = "Version"
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="RightBottomVersion"]
layout_mode = 2
text = "0.01"
horizontal_alignment = 1

[node name="CenterButtonAction" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -26.0
offset_right = 87.5
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ButtonGroup" type="VBoxContainer" parent="CenterButtonAction"]
clip_contents = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/separation = 19

[node name="Start" type="Button" parent="CenterButtonAction/ButtonGroup"]
layout_mode = 2
focus_neighbor_left = NodePath("../ExitGame")
focus_neighbor_top = NodePath("../../../RIghtTopButtonAction/RightTopButtonGroup/RankButton")
focus_neighbor_right = NodePath("../../../RIghtTopButtonAction/RightTopButtonGroup/RankButton")
focus_neighbor_bottom = NodePath("../Setting")
focus_next = NodePath("../Setting")
focus_previous = NodePath("../../../RIghtTopButtonAction/RightTopButtonGroup/RankButton")
theme_override_styles/focus = SubResource("StyleBoxFlat_tklvo")
keep_pressed_outside = true
text = "START"

[node name="Setting" type="Button" parent="CenterButtonAction/ButtonGroup"]
layout_mode = 2
focus_neighbor_left = NodePath("../Start")
focus_neighbor_top = NodePath("../Start")
focus_neighbor_right = NodePath("../ExitGame")
focus_neighbor_bottom = NodePath("../ExitGame")
focus_next = NodePath("../ExitGame")
focus_previous = NodePath("../Start")
theme_override_styles/focus = SubResource("StyleBoxFlat_tklvo")
text = "SETTINGS"

[node name="ExitGame" type="Button" parent="CenterButtonAction/ButtonGroup"]
layout_mode = 2
focus_neighbor_left = NodePath("../Start")
focus_neighbor_top = NodePath("../Setting")
focus_neighbor_right = NodePath("../../../RIghtTopButtonAction/RightTopButtonGroup/RankButton")
focus_neighbor_bottom = NodePath("../../../RIghtTopButtonAction/RightTopButtonGroup/RankButton")
focus_next = NodePath("../../../RIghtTopButtonAction/RightTopButtonGroup/RankButton")
focus_previous = NodePath("../Setting")
theme_override_styles/focus = SubResource("StyleBoxFlat_tklvo")
text = "EXIT"

[node name="BottomInfo" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.5
offset_top = -28.0
offset_right = 69.5
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="BottomInfo"]
layout_mode = 2
text = "A Platform , Battle , Run Game"
horizontal_alignment = 1

[connection signal="pressed" from="RIghtTopButtonAction/RightTopButtonGroup/RankButton" to="." method="_on_rank_button_pressed"]
[connection signal="pressed" from="RIghtTopButtonAction/RightTopButtonGroup/ArchiveButton" to="." method="_on_archive_button_pressed"]
[connection signal="pressed" from="RIghtTopButtonAction/RightTopButtonGroup/ClearDataButton" to="." method="_on_clear_data_button_pressed"]
[connection signal="pressed" from="CenterButtonAction/ButtonGroup/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterButtonAction/ButtonGroup/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="CenterButtonAction/ButtonGroup/ExitGame" to="." method="_on_exit_game_pressed"]
